# fcall-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  great-docs.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml
src/fcall/: __init__.py  _compare.py  _data.py  _download.py  _process.py
tests/: conftest.py  test_compare.py  test_download.py  test_network.py  test_process.py  test_smoke.py
tests/fixtures/compare_a/: D_EXTRA.TXT  D_SINGLETEST.TXT
tests/fixtures/compare_b/: D_SINGLETEST.TXT
tests/fixtures/single/: SINGLETEST_Q202312_G20240115.TXT
tests/fixtures/single_multiple/: D_SMTEST.TXT  SMTEST_Q202312_G20240115.TXT
tests/fixtures/single_multiple_single/: D_SMSTEST.TXT  SMSTEST_Q202312_G20240115.TXT
user_guide/: 01-getting-started.qmd  02-downloading.qmd  03-data-structure.qmd  04-comparing-quarters.qmd  comparing-quarters.qmd  downloading.qmd  getting-started.qmd
