[project]
name = "fcall"
version = "0.0.0"
description = "Parse Farm Credit Administration (FCA) Call Report data into tidy Polars data frames"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michael Thomas", email = "mthomas@ketchbrookanalytics.com" },
]
keywords = ["fca", "farm credit", "call report", "polars", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "polars>=1.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/ketchbrookanalytics/fcall-py"
Repository = "https://github.com/ketchbrookanalytics/fcall-py"
"R package" = "https://github.com/ketchbrookanalytics/fcall"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "great-docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcall"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "E225", "E252", "F", "I", "UP", "B", "SIM", "PT", "N", "RUF"]
ignore = ["RUF022"]  # __all__ is organized by category, not alphabetically

[tool.ruff.lint.per-file-ignores]
"src/fcall/_data.py" = ["E501"]  # long verbatim string literals from R source

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that make real network requests (deselect with -m 'not network')",
]
